# lightning-text

./: .gitignore  LICENSE  README.md  pyproject.toml
src/lightning_text/: __about__.py  __init__.py  _classifier.py  _dataset.py  _fasttext.py  _fasttext_configuration.py  _fasttext_defaults.py  _fasttext_hyperparameters.py  _preprocessing.py  _scoring.py  optuna.py
tests/: __init__.py
